Fixed default layout issue of product grid

--- a/src/css/view/product-grid.scss
+++ b/src/css/view/product-grid.scss
@@ -708,6 +708,63 @@
                 }
             }
         }
+
+        .yith-wcwl-add-to-wishlist {
+                margin: 15px;
+                padding: 7px;
+                color: #fff;
+                background-color: #333;
+
+                &.exists {
+                    span {
+                        display: none;
+                    }
+
+                    a {
+                        font-size: 0;
+
+                        i {
+                            display: none;
+                        }
+
+                        &:after {
+                            content: '\f004';
+                            font-weight: 900;
+                            font-family: 'Font Awesome 5 Free';
+                            font-size: 18px;
+                            text-rendering: auto;
+                            -webkit-font-smoothing: antialiased;
+                            vertical-align: middle;
+                            margin: 0;
+                            padding: 0;
+                        }
+                    }
+                }
+
+                a {
+                    font-size: 0;
+                    vertical-align: middle;
+                    display: inline-block;
+                    color: inherit;
+
+                    i {
+                        display: none;
+                    }
+
+                    &:after {
+                        content: '\f004';
+                        //font-weight: 900;
+                        font-family: 'Font Awesome 5 Free';
+                        font-size: 18px;
+                        text-rendering: auto;
+                        -webkit-font-smoothing: antialiased;
+                        vertical-align: middle;
+                        margin: 0;
+                        padding: 0;
+                    }
+                }
+            }
+
     }
 }
 
